syntax = "proto3";

option csharp_namespace = "RateLimiter.Reader";

package reader;


service Reader {
  rpc Ping(PingRequest) returns (PingResponse);
  rpc get(GetAllLimitsRequest) returns (GetAllLimitsResponse);
}

message PingRequest {
  string clientName = 1;
}

message PingResponse {
  string status = 1;
}

message GetAllLimitsRequest {}

message GetAllLimitsResponse {
  repeated Limit limits = 1;
}

message Limit {
  string route = 2;
  int32 requests_per_minute = 3;
}
